# miro-team-create

./: .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  app.py  miro_team.py  pyproject.toml  requirements-dev.txt  requirements.txt  startup.sh  team_configs.py  vv.json
infrastructure/: build.config  miro-resource-mgmt-bc.yaml  miro-resource-mgmt-dc.yaml  preprod.config  prod.config
tests/: conftest.py  test_app.py  test_miro_teams.py
tests/resources/: external_team_settings.json  internal_team_settings.json  miro_429_response.json  miro_create_team_success_response.json  miro_get_team_settings.json  miro_list_teams_no_cursor_response.json  miro_list_teams_response.json  miro_not_found_response.json  miro_patch_team_settings.json  miro_team_create_response_headers.json  testenv.json
